--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
+/**
+ * `body` style:
+ * - Removes default browser margin.
+ * - Sets a modern, cross-platform sans-serif font stack for consistent appearance.
+ * - Enables CSS font smoothing for improved font rendering on WebKit and Mozilla browsers.
+ *
+ * `code` style:
+ * - Sets a monospaced font stack for code elements for readability and code-like appearance.
+ */
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
